# parse-android-dynparts

./: .gitignore  CMakeLists.txt
debian/: changelog  control
